--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "bottleneck": "^2.19.5",
     "bs58": "^5.0.0",
     "dotenv": "^16.3.1",
+    "express": "^4.18.3",
     "grammy": "^1.20.3",
     "install": "^0.13.0",
     "jito-ts": "^3.0.0",
