--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@solana/spl-token": "^0.3.10",
     "@solana/spl-token-registry": "^0.2.4574",
     "@solana/spl-token-swap": "^0.4.0",
-    "@solana/web3.js": "^1.89.0",
+    "@solana/web3.js": "^1.91.1",
     "@triton-one/yellowstone-grpc": "^0.3.0",
     "@types/node": "^20.10.7",
     "aws-sdk": "^2.1541.0",
@@ -31,6 +31,7 @@
     "bignumber.js": "^9.1.2",
     "bottleneck": "^2.19.5",
     "bs58": "^5.0.0",
+    "cross-fetch": "^4.0.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.3",
     "grammy": "^1.20.3",
@@ -38,16 +39,20 @@
     "jito-ts": "^3.0.0",
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.0",
+    "node-fetch": "^3.3.2",
     "node-telegram-bot-api": "^0.64.0",
     "npm": "^10.2.5",
     "package.json": "^2.0.1",
     "pino": "^8.17.2",
     "pino-pretty": "^10.3.1",
-    "pm2": "^5.3.1"
+    "pm2": "^5.3.1",
+    "promise-retry": "^2.0.1",
+    "wait": "^0.4.2"
   },
   "devDependencies": {
     "@types/node-fetch": "^2.6.10",
     "@types/node-telegram-bot-api": "^0.64.2",
+    "@types/promise-retry": "^1.1.6",
     "eslint": "^8.35.0",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.1.2",
