--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "solfi-bot",
   "version": "1.0.0",
   "description": "It's Sci-Fi trading bot based on the SOLFI token project",
-  "main": "index.js",
+
   "scripts": {
     "start": "npx ts-node src/bot.ts",
     "build": "npx ts-node",
@@ -31,7 +31,6 @@
     "bignumber.js": "^9.1.2",
     "bottleneck": "^2.19.5",
     "bs58": "^5.0.0",
-    "cross-fetch": "^4.0.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.3",
     "grammy": "^1.20.3",
@@ -44,10 +43,7 @@
     "npm": "^10.2.5",
     "package.json": "^2.0.1",
     "pino": "^8.17.2",
-    "pino-pretty": "^10.3.1",
-    "pm2": "^5.3.1",
-    "promise-retry": "^2.0.1",
-    "wait": "^0.4.2"
+    "pino-pretty": "^10.3.1"
   },
   "devDependencies": {
     "@types/node-fetch": "^2.6.10",
