--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "bottleneck": "^2.19.5",
     "bs58": "^5.0.0",
     "dotenv": "^16.3.1",
-    "express": "^4.18.3",
+    "express": "^4.19.2",
     "grammy": "^1.21.1",
     "grammy-inline-menu": "^9.0.0",
     "install": "^0.13.0",
@@ -47,6 +47,7 @@
     "pino-pretty": "^10.3.1"
   },
   "devDependencies": {
+    "@types/express": "^4.17.21",
     "@types/node-fetch": "^2.6.10",
     "@types/node-telegram-bot-api": "^0.64.2",
     "@types/promise-retry": "^1.1.6",
