--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@jup-ag/limit-order-sdk": "^0.1.10",
     "@metaplex-foundation/js": "^0.19.5",
     "@metaplex-foundation/mpl-token-metadata": "^2.11.1",
+    "@ngrok/ngrok": "^1.2.0",
     "@openbook-dex/openbook-v2": "^0.1.7",
     "@project-serum/anchor": "^0.26.0",
     "@raydium-io/raydium-sdk": "^1.3.1-beta.46",
