--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "solfi-bot",
+  "name": "dribs-bot",
   "version": "1.0.0",
-  "description": "It's Sci-Fi trading bot based on the SOLFI token project",
+  "description": "The most degen bird bot",
   "scripts": {
     "start": "npx ts-node src/bot.ts",
     "build": "npx ts-node",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npx jest"
   },
   "author": "",
   "license": "ISC",
@@ -32,6 +32,7 @@
     "bignumber.js": "^9.1.2",
     "bottleneck": "^2.19.5",
     "bs58": "^5.0.0",
+    "chai": "^5.1.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.3",
     "grammy": "^1.21.1",
@@ -45,15 +46,24 @@
     "npm": "^10.2.5",
     "package.json": "^2.0.1",
     "pino": "^8.17.2",
-    "pino-pretty": "^10.3.1"
+    "pino-pretty": "^10.3.1",
+    "ts-mocha": "^10.0.0"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.24.4",
+    "@babel/preset-typescript": "^7.24.1",
+    "@types/chai": "^4.3.14",
+    "@types/expect": "^24.3.0",
+    "@types/jest": "^29.5.12",
+    "@types/mocha": "^10.0.6",
     "@types/node-fetch": "^2.6.10",
     "@types/node-telegram-bot-api": "^0.64.2",
     "@types/promise-retry": "^1.1.6",
     "eslint": "^8.35.0",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.2",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.1.2",
-    "typescript": "^4.8.4"
+    "typescript": "^4.9.5"
   }
 }
