--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@solana/spl-token-swap": "^0.4.0",
     "@solana/web3.js": "^1.91.1",
     "@triton-one/yellowstone-grpc": "^0.3.0",
+    "@trpc/server": "^10.45.2",
     "@types/node": "^20.10.7",
     "aws-sdk": "^2.1541.0",
     "axios": "^1.6.5",
