--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@openbook-dex/openbook-v2": "^0.1.7",
     "@project-serum/anchor": "^0.26.0",
     "@raydium-io/raydium-sdk": "^1.3.1-beta.46",
-    "@raydium-io/raydium-sdk-v2": "^0.1.35-alpha",
+    "@raydium-io/raydium-sdk-v2": "^0.1.37-alpha",
     "@solana-developers/helpers": "^2.3.0",
     "@solana/spl-token": "^0.3.10",
     "@solana/spl-token-registry": "^0.2.4574",
@@ -42,6 +42,7 @@
     "grammy-inline-menu": "^9.0.0",
     "install": "^0.13.0",
     "jito-ts": "^3.0.0",
+    "lodash": "^4.17.21",
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.0",
     "node-fetch": "^3.3.2",
