--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "bn.js": "^5.2.1",
     "bottleneck": "^2.19.5",
     "bs58": "^5.0.0",
+    "canvas": "^2.11.2",
     "chai": "^5.1.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.3",
@@ -51,6 +52,7 @@
     "package.json": "^2.0.1",
     "pino": "^8.17.2",
     "pino-pretty": "^10.3.1",
+    "qr-image": "^3.2.0",
     "solana-swap": "^1.0.10",
     "ts-mocha": "^10.0.0"
   },
@@ -65,6 +67,7 @@
     "@types/node-fetch": "^2.6.10",
     "@types/node-telegram-bot-api": "^0.64.2",
     "@types/promise-retry": "^1.1.6",
+    "@types/qr-image": "^3.2.9",
     "eslint": "^8.35.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.2",
