--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@raydium-io/raydium-sdk": "^1.3.1-beta.58",
     "@raydium-io/raydium-sdk-v2": "^0.1.67-alpha",
     "@solana-developers/helpers": "^2.3.0",
+    "@solana/buffer-layout": "^4.0.1",
+    "@solana/buffer-layout-utils": "^0.2.0",
     "@solana/spl-token": "^0.3.10",
     "@solana/spl-token-registry": "^0.2.4574",
     "@solana/spl-token-swap": "^0.4.0",
