--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@coral-xyz/anchor": "^0.29.0",
     "@grammyjs/menu": "^1.2.1",
     "@grammyjs/storage-mongodb": "^2.4.1",
+    "@jup-ag/dca-sdk": "^2.3.5",
     "@jup-ag/limit-order-sdk": "^0.1.10",
     "@metaplex-foundation/js": "^0.19.5",
     "@metaplex-foundation/mpl-token-metadata": "^2.11.1",
